# advent

./: .editorconfig  .flake8  LICENSE  README.md  pyproject.toml
advent/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py
tasks/: day-1.md  day-2.md  day-3.md  day-4.md  day-5.md  day-6.md
